--- a/services/nginz/integration-test/conf/nginz/nginx.conf
+++ b/services/nginz/integration-test/conf/nginz/nginx.conf
@@ -135,10 +135,10 @@ http {
     ssl_client_certificate integration-ca.pem;
     ######## TLS/SSL block end ##############
 
-    zauth_keystore ../../libs/wire-subsystems/resources/zauth/pubkeys.txt;
+    zauth_keystore resources/zauth/pubkeys.txt;
     zauth_acl conf/nginz/zauth_acl.txt;
-    # needs to be kept in sync with services/brig/test/resources/oauth/ed25519.jwk
-    oauth_pub_key ../../libs/wire-subsystems/resources/oauth/ed25519_public.jwk;
+    # needs to be kept in sync with libs/wire-subsystems/test/resources/oauth/ed25519.jwk
+    oauth_pub_key resources/oauth/ed25519_public.jwk;
 
     location /status {
         set $sanitized_request $request;
