--- a/services/spar/spar.integration.yaml
+++ b/services/spar/spar.integration.yaml
@@ -48,6 +48,12 @@ postgresql:
   database: spar_test
   user: postgres
 
+postgresqlPool:
+  size: 20
+  acquisitionTimeout: 10s
+  agingTimeout: 1d
+  idlenessTimeout: 10m
+
 # Wire/AWS specific, optional
 # discoUrl: "https://"
 
