tools/db/inconsistencies: Add command to find unknown teams

--- a/tools/db/inconsistencies/inconsistencies.cabal
+++ b/tools/db/inconsistencies/inconsistencies.cabal
@@ -19,6 +19,7 @@ executable inconsistencies
     HandleLessUsers
     Options
     Paths_inconsistencies
+    UsersInUnknownTeams
 
   hs-source-dirs:     src
   default-extensions:
