--- a/services/spar/spar.integration.yaml
+++ b/services/spar/spar.integration.yaml
@@ -72,8 +72,8 @@ internalEvents:
   queueName: integration-brig-events-internal
 
 zauth:
-  privateKeys: test/resources/zauth/privkeys.txt
-  publicKeys: test/resources/zauth/pubkeys.txt
+  privateKeys: ../../libs/wire-subsystems/test/resources/zauth/privkeys.txt
+  publicKeys: ../../libs/wire-subsystems/test/resources/zauth/pubkeys.txt
   authSettings:
     keyIndex: 1
     userTokenTimeout: 120
