--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -22,27 +22,26 @@ jobs:
 
       - name: Configure environment for macOS ARM cross-compiling
         run: |
-          echo "PATH=/usr/local/osxcross/bin:$PATH" >> $GITHUB_ENV
           echo "CC=aarch64-apple-darwin24.5-clang" >> $GITHUB_ENV
           echo "CXX=aarch64-apple-darwin24.5-clang++" >> $GITHUB_ENV
           echo "AR=aarch64-apple-darwin24.5-ar" >> $GITHUB_ENV
           echo "CFLAGS=-isysroot /usr/local/osxcross/target/SDK/MacOSX15.5.sdk -mmacosx-version-min=11.0 -arch arm64" >> $GITHUB_ENV
           echo "LDFLAGS=-isysroot /usr/local/osxcross/target/SDK/MacOSX15.5.sdk -arch arm64" >> $GITHUB_ENV
-          echo "RUSTFLAGS=-C linker=aarch64-apple-darwin24.5-clang" >> $GITHUB_ENV
           echo "MACOSX_DEPLOYMENT_TARGET=11.0" >> $GITHUB_ENV
+          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
           echo "OSXCROSS_NO_INCLUDE_PATHS=1" >> $GITHUB_ENV
           echo "SDKROOT=/usr/local/osxcross/target/SDK/MacOSX15.5.sdk" >> $GITHUB_ENV
-          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
-          echo "PKG_CONFIG_PATH=/usr/local/osxcross/target/SDK/MacOSX15.5.sdk/usr/lib/pkgconfig" >> $GITHUB_ENV
           # Prevent autotools from running test binaries
           echo "ac_cv_func_malloc_0_nonnull=yes" >> $GITHUB_ENV
           echo "ac_cv_func_realloc_0_nonnull=yes" >> $GITHUB_ENV
+          echo "ac_cv_have_decl_strerror_r=yes" >> $GITHUB_ENV
 
       - name: Build zAuth for macOS ARM
         run: |
           make libzauth
         env:
-          CARGO_BUILD_TARGET: aarch64-apple-darwin
+          TARGET: aarch64-apple-darwin
+          HOST: x86_64-unknown-linux-gnu
 
       - name: Upload zAuth binary as artifact
         uses: actions/upload-artifact@v4
