--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -8,43 +8,66 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up MacOS Cross Compiler
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: aarch64-apple-darwin
+
+      - name: Set up osxcross toolchain
         uses: Timmmm/setup-osxcross@v2
         with:
-          osx-version: "15.5"
-
-      - name: Install Rustup targets
-        run: |
-          rustup target add aarch64-apple-darwin x86_64-apple-darwin
-
-      - name: Checkout repository
-        uses: actions/checkout@v3
+          macos-sdk: "15.5"
 
       - name: Configure environment for macOS ARM cross-compiling
         run: |
-          echo "CC=aarch64-apple-darwin24.5-clang" >> $GITHUB_ENV
-          echo "CXX=aarch64-apple-darwin24.5-clang++" >> $GITHUB_ENV
-          echo "AR=aarch64-apple-darwin24.5-ar" >> $GITHUB_ENV
-          echo "CFLAGS=-isysroot /usr/local/osxcross/target/SDK/MacOSX15.5.sdk -mmacosx-version-min=11.0 -arch arm64" >> $GITHUB_ENV
-          echo "LDFLAGS=-isysroot /usr/local/osxcross/target/SDK/MacOSX15.5.sdk -arch arm64" >> $GITHUB_ENV
+          export TRIPLE="aarch64-apple-darwin24.5"
+          export ARCHFLAG="-arch arm64"
+          
+          echo "CC=${TRIPLE}-clang" >> $GITHUB_ENV
+          echo "CXX=${TRIPLE}-clang++" >> $GITHUB_ENV
+          echo "AR=${TRIPLE}-ar" >> $GITHUB_ENV
+          echo "TARGET=aarch64-apple-darwin" >> $GITHUB_ENV
+          echo "CFLAGS=-isysroot /usr/local/osxcross/target/SDK/MacOSX15.5.sdk -mmacosx-version-min=11.0 ${ARCHFLAG}" >> $GITHUB_ENV
+          echo "LDFLAGS=-isysroot /usr/local/osxcross/target/SDK/MacOSX15.5.sdk ${ARCHFLAG}" >> $GITHUB_ENV
+          echo "RUSTFLAGS=-C linker=${TRIPLE}-clang" >> $GITHUB_ENV
           echo "MACOSX_DEPLOYMENT_TARGET=11.0" >> $GITHUB_ENV
-          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
           echo "OSXCROSS_NO_INCLUDE_PATHS=1" >> $GITHUB_ENV
           echo "SDKROOT=/usr/local/osxcross/target/SDK/MacOSX15.5.sdk" >> $GITHUB_ENV
-          # Prevent autotools from running test binaries
+          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
           echo "ac_cv_func_malloc_0_nonnull=yes" >> $GITHUB_ENV
           echo "ac_cv_func_realloc_0_nonnull=yes" >> $GITHUB_ENV
-          echo "ac_cv_have_decl_strerror_r=yes" >> $GITHUB_ENV
 
-      - name: Build zAuth for macOS ARM
+      - name: Verify compiler
         run: |
+          which $CC
+          $CC --version
+          echo "int main() {return 0;}" | $CC -v $CFLAGS -x c -o /dev/null -
+
+      - name: Build libzauth (Rust + C + libsodium-sys)
+        run: |
+          echo "Building for aarch64-apple-darwin..."
           make libzauth
         env:
           TARGET: aarch64-apple-darwin
-          HOST: x86_64-unknown-linux-gnu
+          CC: ${{ env.CC }}
+          CXX: ${{ env.CXX }}
+          AR: ${{ env.AR }}
+          CFLAGS: ${{ env.CFLAGS }}
+          LDFLAGS: ${{ env.LDFLAGS }}
+          RUSTFLAGS: ${{ env.RUSTFLAGS }}
+          MACOSX_DEPLOYMENT_TARGET: 11.0
+          OSXCROSS_NO_INCLUDE_PATHS: 1
+          SDKROOT: /usr/local/osxcross/target/SDK/MacOSX15.5.sdk
+          PKG_CONFIG_ALLOW_CROSS: 1
+          ac_cv_func_malloc_0_nonnull: yes
+          ac_cv_func_realloc_0_nonnull: yes
 
-      - name: Upload zAuth binary as artifact
+      - name: Upload compiled artifact
         uses: actions/upload-artifact@v4
         with:
-          name: zauth-macos-arm64
-          path: dist/zauth
+          name: libzauth-aarch64-apple-darwin
+          path: |
+            libs/libzauth/libzauth-c/target/aarch64-apple-darwin/release
