--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -41,15 +41,16 @@ jobs:
       - name: Build zauth
         run: |
           cd libs/libzauth/libzauth-c
+          rustup target add aarch64-apple-darwin
           export CC=$OSXCROSS_TARGET/bin/aarch64-apple-darwin24.5-clang
           export CARGO_TARGET_AARCH64_APPLE_DARWIN_LINKER=$CC
           cargo build --release --target aarch64-apple-darwin
 
       - name: List built binaries
-        run: ls -lh target/aarch64-apple-darwin/release
+        run: ls -lh libs/libzauth/libzauth-c/target/aarch64-apple-darwin/release
 
       - name: Upload zauth binary as artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: zauth-macos-arm64
-          path: target/aarch64-apple-darwin/release/zauth
+          path: libs/libzauth/libzauth-c/target/aarch64-apple-darwin/release/zauth
