--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -22,21 +22,15 @@ jobs:
         with:
           osx-version: ${{ env.SDK_VERSION }}
 
-      - name: Set compiler variables
-        run: |
-          export CC=$OSXCROSS_TARGET/bin/aarch64-apple-darwin24.5-clang
-          export CXX=$OSXCROSS_TARGET/bin/aarch64-apple-darwin24.5-clang++
-          export AR=$OSXCROSS_TARGET/bin/aarch64-apple-darwin24.5-ar
-          export SDKROOT=$OSXCROSS_TARGET/SDK/MacOSX${SDK_VERSION}.sdk
-          export MACOSX_DEPLOYMENT_TARGET=11.0
-          echo "CC=$CC"
-          $CC --version
-
-      - name: Install Rust
+      - name: Install Rust (with macOS ARM64 target)
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
+          target: aarch64-apple-darwin
+
+      - name: Verify target installed
+        run: rustup target list --installed
 
       - name: Build zauth
         run: |
