extended/hasql-pool: Record metrics

--- a/libs/extended/extended.cabal
+++ b/libs/extended/extended.cabal
@@ -97,6 +97,7 @@ library
     , imports
     , metrics-wai
     , monad-control
+    , prometheus-client
     , retry
     , servant
     , servant-client
