tools/db/inconsistencies: Add script to find users with null permissions

--- a/tools/db/inconsistencies/inconsistencies.cabal
+++ b/tools/db/inconsistencies/inconsistencies.cabal
@@ -17,6 +17,7 @@ executable inconsistencies
     EmailLessUsers
     EmailUnparseableUsers
     HandleLessUsers
+    NullPermsTeamMembers
     Options
     Paths_inconsistencies
     UsersInUnknownTeams
