--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -35,9 +35,9 @@ jobs:
       - name: Build zauth
         run: |
           cd libs/libzauth/libzauth-c
-          export CC=$OSXCROSS_TARGET/bin/aarch64-apple-darwin24.5-clang
-          export CXX=$OSXCROSS_TARGET/bin/aarch64-apple-darwin24.5-clang++
-          export AR=$OSXCROSS_TARGET/bin/aarch64-apple-darwin24.5-ar
+          export CC=$OSXCROSS_TARGET/bin/aarch64-apple-darwin-clang
+          export CXX=$OSXCROSS_TARGET/bin/aarch64-apple-darwin-clang++
+          export AR=$OSXCROSS_TARGET/bin/aarch64-apple-darwin-ar
           export SDKROOT=$OSXCROSS_TARGET/SDK/MacOSX${SDK_VERSION}.sdk
           export MACOSX_DEPLOYMENT_TARGET=11.0
           export CFLAGS="-isysroot $SDKROOT -arch arm64 -mmacosx-version-min=11.0"
