--- a/libs/extended/extended.cabal
+++ b/libs/extended/extended.cabal
@@ -99,6 +99,7 @@ library
     , monad-control
     , prometheus-client
     , retry
+    , uuid
     , servant
     , servant-client
     , servant-client-core
