--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -22,16 +22,17 @@ jobs:
         with:
           osx-version: ${{ env.SDK_VERSION }}
 
-      - name: Find osxcross clang path
-        run: |
-          echo "Searching for aarch64-apple-darwin clang binaries..."
-          find $HOME $GITHUB_WORKSPACE /usr/local -type f -name 'aarch64-apple-darwin*-clang' 2>/dev/null | tee clang_paths.txt
-
       - name: Locate osxcross toolchain
         id: locate
         run: |
-          TOOLCHAIN_DIR=$(find $HOME $GITHUB_WORKSPACE -type f -name 'aarch64-apple-darwin*-clang' | head -n 1 | xargs dirname)
-          echo "Found toolchain bin directory: $TOOLCHAIN_DIR"
+          TOOLCHAIN_PATH=$(find /opt /usr/local $HOME $GITHUB_WORKSPACE -type f -name 'aarch64-apple-darwin*-clang' 2>/dev/null | head -n 1 || true)
+          if [ -z "$TOOLCHAIN_PATH" ]; then
+            echo "aarch64-apple-darwin clang not found"
+            find /opt /usr/local -maxdepth 3 -type d -name "osxcross" 2>/dev/null || true
+            exit 1
+          fi
+          TOOLCHAIN_DIR=$(dirname "$TOOLCHAIN_PATH")
+          echo "found toolchain bin directory: $TOOLCHAIN_DIR"
           echo "toolchain=$TOOLCHAIN_DIR" >> $GITHUB_OUTPUT
 
       - name: Install Rust (with macOS ARM64 target)
@@ -47,16 +48,19 @@ jobs:
       - name: Build zauth
         run: |
           cd libs/libzauth/libzauth-c
-          export CC=${{ steps.locate.outputs.toolchain }}/aarch64-apple-darwin-clang
-          export CXX=${{ steps.locate.outputs.toolchain }}/aarch64-apple-darwin-clang++
-          export AR=${{ steps.locate.outputs.toolchain }}/aarch64-apple-darwin-ar
-          export SDKROOT=$(dirname $(dirname ${{ steps.locate.outputs.toolchain }}))/SDK/MacOSX${SDK_VERSION}.sdk
+          export TOOLCHAIN=${{ steps.locate.outputs.toolchain }}
+          export CC=$TOOLCHAIN/aarch64-apple-darwin-clang
+          export CXX=$TOOLCHAIN/aarch64-apple-darwin-clang++
+          export AR=$TOOLCHAIN/aarch64-apple-darwin-ar
+          export SDKROOT=$(dirname $(dirname $TOOLCHAIN))/SDK/MacOSX${SDK_VERSION}.sdk
           export MACOSX_DEPLOYMENT_TARGET=11.0
           export CFLAGS="-isysroot $SDKROOT -arch arm64 -mmacosx-version-min=11.0"
           export LDFLAGS="-isysroot $SDKROOT -arch arm64"
           export PKG_CONFIG_ALLOW_CROSS=1
           export CARGO_TARGET_AARCH64_APPLE_DARWIN_LINKER=$CC
-          $CC --version || (echo "clang missing" && exit 1)
+          echo "Using CC=$CC"
+          ls -l $CC || (echo "clang not found at $CC" && exit 1)
+          $CC --version || (echo "clang executable broken" && exit 1)
           cargo build --release --target aarch64-apple-darwin --verbose
 
       - name: List built binaries
