--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -25,10 +25,12 @@ jobs:
       - name: Locate osxcross toolchain
         id: locate
         run: |
-          TOOLCHAIN_PATH=$(find /opt /usr/local $HOME $GITHUB_WORKSPACE -type f -name 'aarch64-apple-darwin*-clang' 2>/dev/null | head -n 1 || true)
+          TOOLCHAIN_PATH=$(find /home/runner/work/_actions/Timmmm/setup-osxcross/v2/osxcross/target/bin \
+            -type f -name 'aarch64-apple-darwin*-clang' 2>/dev/null | head -n 1 || true)
           if [ -z "$TOOLCHAIN_PATH" ]; then
             echo "aarch64-apple-darwin clang not found"
-            find /opt /usr/local -maxdepth 3 -type d -name "osxcross" 2>/dev/null || true
+            echo "Available files under osxcross target/bin:"
+            ls -l /home/runner/work/_actions/Timmmm/setup-osxcross/v2/osxcross/target/bin || true
             exit 1
           fi
           TOOLCHAIN_DIR=$(dirname "$TOOLCHAIN_PATH")
