--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -22,21 +22,6 @@ jobs:
         with:
           osx-version: ${{ env.SDK_VERSION }}
 
-      - name: Locate osxcross toolchain
-        id: locate
-        run: |
-          TOOLCHAIN_PATH=$(find /home/runner/work/_actions/Timmmm/setup-osxcross/v2/osxcross/target/bin \
-            \( -type f -o -type l \) -name 'aarch64-apple-darwin*-clang' 2>/dev/null | head -n 1 || true)
-          if [ -z "$TOOLCHAIN_PATH" ]; then
-            echo "aarch64-apple-darwin clang not found"
-            echo "Available files under osxcross target/bin:"
-            ls -l /home/runner/work/_actions/Timmmm/setup-osxcross/v2/osxcross/target/bin || true
-            exit 1
-          fi
-          TOOLCHAIN_DIR=$(dirname "$TOOLCHAIN_PATH")
-          echo "found toolchain bin directory: $TOOLCHAIN_DIR"
-          echo "toolchain=$TOOLCHAIN_DIR" >> $GITHUB_OUTPUT
-
       - name: Install Rust (with macOS ARM64 target)
         uses: actions-rs/toolchain@v1
         with:
@@ -50,18 +35,25 @@ jobs:
       - name: Build zauth
         run: |
           cd libs/libzauth/libzauth-c
-          export TOOLCHAIN=${{ steps.locate.outputs.toolchain }}
-          export CC=$TOOLCHAIN/aarch64-apple-darwin-clang
-          export CXX=$TOOLCHAIN/aarch64-apple-darwin-clang++
-          export AR=$TOOLCHAIN/aarch64-apple-darwin-ar
+          export TOOLCHAIN=/home/runner/work/_actions/Timmmm/setup-osxcross/v2/osxcross/target/bin
+          export CC=$(find "$TOOLCHAIN" \( -type f -o -type l \) -name 'aarch64-apple-darwin*-clang' | head -n 1)
+          export CXX=$(find "$TOOLCHAIN" \( -type f -o -type l \) -name 'aarch64-apple-darwin*-clang++' | head -n 1)
+          export AR=$(find "$TOOLCHAIN" \( -type f -o -type l \) -name 'aarch64-apple-darwin*-ar' | head -n 1)
+
+          if [ -z "$CC" ]; then
+            echo "Error: couldn't find aarch64 clang in $TOOLCHAIN"
+            ls -l "$TOOLCHAIN"
+            exit 1
+          fi
+
           export SDKROOT=$(dirname $(dirname $TOOLCHAIN))/SDK/MacOSX${SDK_VERSION}.sdk
           export MACOSX_DEPLOYMENT_TARGET=11.0
           export CFLAGS="-isysroot $SDKROOT -arch arm64 -mmacosx-version-min=11.0"
           export LDFLAGS="-isysroot $SDKROOT -arch arm64"
           export PKG_CONFIG_ALLOW_CROSS=1
           export CARGO_TARGET_AARCH64_APPLE_DARWIN_LINKER=$CC
+
           echo "Using CC=$CC"
-          ls -l $CC || (echo "clang not found at $CC" && exit 1)
           $CC --version || (echo "clang executable broken" && exit 1)
           cargo build --release --target aarch64-apple-darwin --verbose
 
