--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -49,7 +49,8 @@ jobs:
             exit 1
           fi
 
-          export SDKROOT=$(dirname $(dirname $TOOLCHAIN))/SDK/MacOSX${SDK_VERSION}.sdk
+          export OSXCROSS="$OSXCROSS_TARGET"
+          export SDKROOT="$OSXCROSS/target/SDK/MacOSX${SDK_VERSION}.sdk"
           ls -l "$SDKROOT"
           export MACOSX_DEPLOYMENT_TARGET=11.0
           export CFLAGS="-isysroot $SDKROOT -arch arm64 -mmacosx-version-min=11.0"
