--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -57,6 +57,9 @@ jobs:
           export LDFLAGS="-isysroot $SDKROOT -arch arm64"
           export PKG_CONFIG_ALLOW_CROSS=1
           export CARGO_TARGET_AARCH64_APPLE_DARWIN_LINKER=$CC
+          export CC_aarch64_apple_darwin="$CC"
+          export CFLAGS_aarch64_apple_darwin="-isysroot $SDKROOT -arch arm64 -mmacosx-version-min=11.0"
+          export LDFLAGS_aarch64_apple_darwin="-isysroot $SDKROOT -arch arm64"
 
           echo "Using CC=$CC"
           $CC --version || (echo "clang executable broken" && exit 1)
