--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -353,6 +353,7 @@ library
     , uri-bytestring                        >=0.2
     , utf8-string
     , uuid                                  >=1.3
+    , vector
     , wai                                   >=3.0
     , wai-extra                             >=3.0
     , wai-middleware-gunzip                 >=0.0.2
